# retail-signal-os

./: .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
backend/: __init__.py
backend/agents/: __init__.py  backtest_agent.py  bear_agent.py  bull_agent.py  catalyst_agent.py  explanation_engine.py  manipulation_agent.py  ml_agent.py  models.py  research_agent.py  risk_agent.py  synthesizer.py
backend/api/: main.py  routes.py
backend/database/: db.py  schema.sql
backend/features/: __init__.py  catalyst.py  feature_store.py  time_decay.py  zscore.py
backend/ingestion/: __init__.py  market_data_provider.py  reddit_provider.py  sec_provider.py
backend/ml/: __init__.py  dataset.py  models.py  results.py  scoring.py  split.py  training.py  walk_forward.py
backend/models/: backtester.py  market_data.py  sec_filing.py  signal_card.py  signal_engine.py
backend/processing/: __init__.py  events.py  manipulation.py  pipeline.py  sentiment.py  ticker_resolver.py
backend/research/: __init__.py  ablation.py  dataset.py  event_study.py  (+6 more)
dashboard/: app.py
docs/: demo_walkthrough.md  final_presentation_package.md  portfolio_summary.md
research/: README.md
tests/: test_agents.py  test_api_signals.py  test_backtester.py  test_catalyst.py  test_demo_pipeline.py  test_manipulation.py  test_market_data_provider.py  test_ml.py  test_pipeline.py  test_reddit_provider.py  test_research_validation.py  test_sec_provider.py  test_sentiment.py  test_signal_card.py  test_simulation.py  test_ticker_resolver.py  test_time_decay.py  test_zscore.py
(+4 files in other folders)
