[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retailsignal-os"
version = "0.1.0"
description = "Research foundation for explainable alternative-data stock signal cards."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "praw>=7.8",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "streamlit>=1.35",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
market = [
  "yfinance>=0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]
